--- a/ansible/AWSInfrastructureAnsible/ec2-ansible.yaml
+++ b/ansible/AWSInfrastructureAnsible/ec2-ansible.yaml
@@ -1,10 +1,9 @@
 - hosts: localhost
-  gather_facts: no #this is to speed up the playbook so that it runs faster
+  gather_facts: no 
   
   tasks:
   - name: Create EC2 instance by Ansible
-  #code from https://docs.ansible.com/ansible/latest/collections/amazon/aws/ec2_instance_module.html
-  #starting with - name: start an instance with a public IP address
+ 
 
     ec2_instance:
       name: "EC2-instance-Ansible"
