--- a/ansible/terraform/ubuntu/terraform-ansible.yaml
+++ b/ansible/terraform/ubuntu/terraform-ansible.yaml
@@ -1,8 +1,8 @@
 ---
-- hosts: all  #it will run on any host by all
-  remote_user: ubuntu #for ubuntu server
+- hosts: all 
+  remote_user: ubuntu 
   become: true
-  gather_facts: no #this is to speed up the playbook so that it runs faster
+  gather_facts: no 
   tasks: 
   #for linux server
   - name: Install postgresql
